[PE] Fix hittesting under transform + fragmentation.

PLC::CollectFragments includes fragmentation offset if called in GeometryMapper
mode. However, when hit testing under transform, we apply fragmentation and transform,
then hit test each fragment without any fragmentation or transform offset.
Therefore, in this post-fragment/transform mode, don't apply fragmentation offset
again.

The callsites in PaintLayerPainter for the equivalent situation during paint already
correctly pass an empty LayoutPoint offset for layer bounds.

Bug: 823255
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I3135e51b72c5fd02a9d67b3dcbdc51e39ef3cde2
Reviewed-on: https://chromium-review.googlesource.com/978675
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545606}
Former-commit-id: 16820d80608ada024fa4bced9d55ed3842acbb97